Update 'tque4apup-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:4172cabe4c60ea6dd300db6a7477c9a29f64d972@sha256:780d48eefb91f4532259b629ee0ef91e04f0264d46765e5e99829de0b2753bb4

--- a/components/tque4apup-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/tque4apup-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: tque4apup-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:4172cabe4c60ea6dd300db6a7477c9a29f64d972@sha256:780d48eefb91f4532259b629ee0ef91e04f0264d46765e5e99829de0b2753bb4
+          name: container-image
